--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <nav id="nav1">
         <ul class="navb">
-            <li> <i class="fa-solid fa-phone"></i> +92 03102600286</li>
+            <li> <i class="fa-solid fa-phone"></i> +92 3102865734</li>
             <li>|</li>
-            <li><i class="fa-solid fa-envelope"></i>frhamid2000@gmail.com</li>
+            <li><i class="fa-solid fa-envelope"></i>abc2000@gmail.com</li>
 
         </ul>
         <div class="social">
